modules/gdscript/tests/scripts/analyzer/errors/nullable_access_operator_index.gd
class A:
    var b: A?
    var c: String?
    func banana():
        pass
func test():
    var foo := A.new()
    foo.c?[0].begins_with("")
